src/DaxStudio.UI/Grammars/Generated/DirectQuerySqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/dgosbell/source/repos/DaxStudio/src/DaxStudio.UI/Grammars/DirectQuerySql.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DaxStudio.UI.Grammars.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class DirectQuerySqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SELECT=1, FROM=2, WHERE=3, AS=4, ON=5, AND=6, OR=7, NOT=8, IN=9, IS=10, 
		NULL_=11, INNER=12, LEFT=13, RIGHT=14, FULL=15, OUTER=16, CROSS=17, JOIN=18, 
		GROUP=19, BY=20, HAVING=21, ORDER=22, ASC=23, DESC=24, DISTINCT=25, BETWEEN=26, 
		LIKE=27, CASE=28, WHEN=29, THEN=30, ELSE=31, END=32, TOP=33, UNION=34, 
		ALL=35, SUM=36, COUNT=37, MIN=38, MAX=39, AVG=40, COUNT_BIG=41, ISNULL=42, 
		CAST=43, CONVERT=44, COALESCE=45, DOLLAR_TABLE=46, BRACKETED_NAME=47, 
		STRING_LITERAL=48, NUMBER=49, IDENTIFIER=50, EQUALS=51, NOT_EQUALS=52, 
		GREATER_THAN=53, LESS_THAN=54, GREATER_EQUALS=55, LESS_EQUALS=56, LPAREN=57, 
		RPAREN=58, COMMA=59, DOT=60, SEMICOLON=61, PLUS=62, MINUS=63, STAR=64, 
		SLASH=65, PERCENT=66, WS=67, LINE_COMMENT=68, BLOCK_COMMENT=69;
	public const int
		RULE_query = 0, RULE_selectStatement = 1, RULE_selectList = 2, RULE_selectItem = 3, 
		RULE_fromClause = 4, RULE_tableSource = 5, RULE_subselectBlock = 6, RULE_subselectColumnList = 7, 
		RULE_subselectColumn = 8, RULE_tableReference = 9, RULE_schemaTable = 10, 
		RULE_joinClause = 11, RULE_joinType = 12, RULE_tableJoinSource = 13, RULE_onJoinClause = 14, 
		RULE_joinCondition = 15, RULE_whereClause = 16, RULE_groupByClause = 17, 
		RULE_havingClause = 18, RULE_orderByClause = 19, RULE_orderByItem = 20, 
		RULE_expression = 21, RULE_unaryExpression = 22, RULE_functionCall = 23, 
		RULE_functionName = 24, RULE_qualifiedColumnRef = 25, RULE_comparisonOp = 26, 
		RULE_expressionList = 27, RULE_literal = 28, RULE_bracketedName = 29;
	public static readonly string[] ruleNames = {
		"query", "selectStatement", "selectList", "selectItem", "fromClause", 
		"tableSource", "subselectBlock", "subselectColumnList", "subselectColumn", 
		"tableReference", "schemaTable", "joinClause", "joinType", "tableJoinSource", 
		"onJoinClause", "joinCondition", "whereClause", "groupByClause", "havingClause", 
		"orderByClause", "orderByItem", "expression", "unaryExpression", "functionCall", 
		"functionName", "qualifiedColumnRef", "comparisonOp", "expressionList", 
		"literal", "bracketedName"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'[$Table]'", 
		null, null, null, null, "'='", null, "'>'", "'<'", "'>='", "'<='", "'('", 
		"')'", "','", "'.'", "';'", "'+'", "'-'", "'*'", "'/'", "'%'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SELECT", "FROM", "WHERE", "AS", "ON", "AND", "OR", "NOT", "IN", 
		"IS", "NULL_", "INNER", "LEFT", "RIGHT", "FULL", "OUTER", "CROSS", "JOIN", 
		"GROUP", "BY", "HAVING", "ORDER", "ASC", "DESC", "DISTINCT", "BETWEEN", 
		"LIKE", "CASE", "WHEN", "THEN", "ELSE", "END", "TOP", "UNION", "ALL", 
		"SUM", "COUNT", "MIN", "MAX", "AVG", "COUNT_BIG", "ISNULL", "CAST", "CONVERT", 
		"COALESCE", "DOLLAR_TABLE", "BRACKETED_NAME", "STRING_LITERAL", "NUMBER", 
		"IDENTIFIER", "EQUALS", "NOT_EQUALS", "GREATER_THAN", "LESS_THAN", "GREATER_EQUALS", 
		"LESS_EQUALS", "LPAREN", "RPAREN", "COMMA", "DOT", "SEMICOLON", "PLUS", 
		"MINUS", "STAR", "SLASH", "PERCENT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DirectQuerySql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DirectQuerySqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DirectQuerySqlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DirectQuerySqlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectStatementContext selectStatement() {
			return GetRuleContext<SelectStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(DirectQuerySqlParser.Eof, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			selectStatement();
			State = 61;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELECT() { return GetToken(DirectQuerySqlParser.SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SelectListContext selectList() {
			return GetRuleContext<SelectListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FromClauseContext fromClause() {
			return GetRuleContext<FromClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JoinClauseContext[] joinClause() {
			return GetRuleContexts<JoinClauseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public JoinClauseContext joinClause(int i) {
			return GetRuleContext<JoinClauseContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhereClauseContext whereClause() {
			return GetRuleContext<WhereClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupByClauseContext groupByClause() {
			return GetRuleContext<GroupByClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HavingClauseContext havingClause() {
			return GetRuleContext<HavingClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderByClauseContext orderByClause() {
			return GetRuleContext<OrderByClauseContext>(0);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelectStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectStatementContext selectStatement() {
		SelectStatementContext _localctx = new SelectStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_selectStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			Match(SELECT);
			State = 64;
			selectList();
			State = 65;
			fromClause();
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 192512L) != 0)) {
				{
				{
				State = 66;
				joinClause();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 72;
				whereClause();
				}
			}

			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==GROUP) {
				{
				State = 75;
				groupByClause();
				}
			}

			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==HAVING) {
				{
				State = 78;
				havingClause();
				}
			}

			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDER) {
				{
				State = 81;
				orderByClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectItemContext[] selectItem() {
			return GetRuleContexts<SelectItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectItemContext selectItem(int i) {
			return GetRuleContext<SelectItemContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(DirectQuerySqlParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(DirectQuerySqlParser.COMMA, i);
		}
		public SelectListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelectList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectListContext selectList() {
		SelectListContext _localctx = new SelectListContext(Context, State);
		EnterRule(_localctx, 4, RULE_selectList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			selectItem();
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 85;
				Match(COMMA);
				State = 86;
				selectItem();
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(DirectQuerySqlParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BracketedNameContext bracketedName() {
			return GetRuleContext<BracketedNameContext>(0);
		}
		public SelectItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelectItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectItemContext selectItem() {
		SelectItemContext _localctx = new SelectItemContext(Context, State);
		EnterRule(_localctx, 6, RULE_selectItem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			expression(0);
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 93;
				Match(AS);
				State = 94;
				bracketedName();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FromClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(DirectQuerySqlParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TableSourceContext tableSource() {
			return GetRuleContext<TableSourceContext>(0);
		}
		public FromClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fromClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFromClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FromClauseContext fromClause() {
		FromClauseContext _localctx = new FromClauseContext(Context, State);
		EnterRule(_localctx, 8, RULE_fromClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(FROM);
			State = 98;
			tableSource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableSourceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SubselectBlockContext[] subselectBlock() {
			return GetRuleContexts<SubselectBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubselectBlockContext subselectBlock(int i) {
			return GetRuleContext<SubselectBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(DirectQuerySqlParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(DirectQuerySqlParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableReferenceContext[] tableReference() {
			return GetRuleContexts<TableReferenceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableReferenceContext tableReference(int i) {
			return GetRuleContext<TableReferenceContext>(i);
		}
		public TableSourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableSource; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableSource(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableSourceContext tableSource() {
		TableSourceContext _localctx = new TableSourceContext(Context, State);
		EnterRule(_localctx, 10, RULE_tableSource);
		int _la;
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 100;
				subselectBlock();
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 101;
					Match(COMMA);
					State = 102;
					subselectBlock();
					}
					}
					State = 107;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				tableReference();
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 109;
					Match(COMMA);
					State = 110;
					tableReference();
					}
					}
					State = 115;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubselectBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LPAREN() { return GetTokens(DirectQuerySqlParser.LPAREN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN(int i) {
			return GetToken(DirectQuerySqlParser.LPAREN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELECT() { return GetToken(DirectQuerySqlParser.SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SubselectColumnListContext subselectColumnList() {
			return GetRuleContext<SubselectColumnListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(DirectQuerySqlParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SchemaTableContext schemaTable() {
			return GetRuleContext<SchemaTableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AS() { return GetTokens(DirectQuerySqlParser.AS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS(int i) {
			return GetToken(DirectQuerySqlParser.AS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOLLAR_TABLE() { return GetToken(DirectQuerySqlParser.DOLLAR_TABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RPAREN() { return GetTokens(DirectQuerySqlParser.RPAREN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN(int i) {
			return GetToken(DirectQuerySqlParser.RPAREN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BracketedNameContext bracketedName() {
			return GetRuleContext<BracketedNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableReferenceContext tableReference() {
			return GetRuleContext<TableReferenceContext>(0);
		}
		public SubselectBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_subselectBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSubselectBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SubselectBlockContext subselectBlock() {
		SubselectBlockContext _localctx = new SubselectBlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_subselectBlock);
		int _la;
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 118;
				Match(LPAREN);
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LPAREN) {
					{
					State = 119;
					Match(LPAREN);
					}
				}

				State = 122;
				Match(SELECT);
				State = 123;
				subselectColumnList();
				State = 124;
				Match(FROM);
				State = 125;
				schemaTable();
				State = 126;
				Match(AS);
				State = 127;
				Match(DOLLAR_TABLE);
				State = 129;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
				case 1:
					{
					State = 128;
					Match(RPAREN);
					}
					break;
				}
				State = 131;
				Match(RPAREN);
				State = 132;
				Match(AS);
				State = 133;
				bracketedName();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 135;
				tableReference();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubselectColumnListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SubselectColumnContext[] subselectColumn() {
			return GetRuleContexts<SubselectColumnContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubselectColumnContext subselectColumn(int i) {
			return GetRuleContext<SubselectColumnContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(DirectQuerySqlParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(DirectQuerySqlParser.COMMA, i);
		}
		public SubselectColumnListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_subselectColumnList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDirectQuerySqlVisitor<TResult> typedVisitor = visitor as IDirectQuerySqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSubselectColumnList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SubselectColumnListContext subselectColumnList() {
		SubselectColumnListContext _localctx = new SubselectColumnListContext(Context, State);
		EnterRule(_localctx, 14, RULE_subselectColumnList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			subselectColumn();
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 139;
				Match(COMMA);
				State = 140;
				subselectColumn();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
